--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="lbl_price">PRICE</string>
     <string name="btn_buy_now">BUY NOW</string>
     <string name="btn_coming_soon">COMING SOON</string>
-    <string name="msg_no_ticket_found">No ticket found. Try scanning the QR Codes from http://api.androidhive.info/qrcodes/</string>
+    <string name="msg_no_ticket_found">No ticket found. Try scanning the QR Codes from qrcodes</string>
 </resources>
